--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "^2.3",
     "webpack": "^4.28.3",
     "webpack-build-notifier": "^0.1.30",
     "webpack-cli": "^3.2.1",
